# workflow-check

./: Makefile  README.md  pyproject.toml
.github/workflows/: hello-world.yml
tests/: test_main.py
workflow_check/: main.py
